bin_PROGRAMS = which
which_SOURCES = getopt.c getopt1.c bash.c which.c
man_MANS = which.1

clean-local:
	rm -f @PACKAGE@-@VERSION@.tar.gz

maintainer-clean-local:
	rm -f Makefile.in README config.h aclocal.m4 index.html \
	    configure config.cache config.log stamp-h.in cvslog-2.*.html \
	    ChangeLog config.h.in which-2.spec EXAMPLES
