dnl Process this file with autoconf to produce a configure script.
AC_INIT(which.c)
AM_INIT_AUTOMAKE(which, 2.2)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_LANG_C

dnl Checks for libraries.
AC_CHECK_LIB(readline, tilde_expand)
AC_CHECK_LIB(iberty, xmalloc)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_FUNCS(strchr memcpy)
AC_CHECK_HEADERS(unistd.h)
AC_HEADER_STAT

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_GETGROUPS
AC_CHECK_FUNCS(getcwd)

AC_OUTPUT(Makefile)
