dnl Process this file with autoconf to produce a configure script.
AC_INIT(tilde.c)		dnl A distinctive file to look for in srcdir.
AC_PREREQ(2.12)			dnl Minimum Autoconf version required.

AM_INIT_AUTOMAKE(tilde, 0.0, nodefs)	dnl Keep automake happy
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_CHECK_PROG(AR, ar, ar, ar)
AC_PROG_RANLIB

AC_MINIX
AC_CHECK_HEADERS(unistd.h stdlib.h string.h)
BASH_CHECK_GETPW_FUNCS

AC_OUTPUT(Makefile)
